Ввод из файла, pipe