@@ -10,9 +10,9 @@
     <description>Java OOP project implementing financial operations with strict type safety, immutability principles, and functional programming concepts. Features account management with deposit/withdraw operations, fund transfers, balance validation, and comprehensive error handling while maintaining clean architecture separation. Implements sealed interfaces for type safety, record classes for immutable data structures, and functional composition patterns for business logic.</description>
 
     <properties>
-        <java.version>17</java.version>
+        <java.version>21</java.version>
         <maven-compiler-plugin.version>3.14.0</maven-compiler-plugin.version>
-        <groovy.version>4.0.26</groovy.version>
+        <maven-jar-plugin.version>3.4.2</maven-jar-plugin.version>
         <logback-classic.version>1.5.18</logback-classic.version>
         <slf4j-api.version>2.0.17</slf4j-api.version>
         <testng.version>7.9.0</testng.version>
@@ -99,6 +99,8 @@
                     </execution>
                 </executions>
             </plugin>
+
+            <!-- Плагин компиляции -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -106,9 +108,21 @@
                 <configuration>
                     <source>${java.version}</source>
                     <target>${java.version}</target>
-                    <compilerArgs>
-                        <arg>--enable-preview</arg>
-                    </compilerArgs>
+                </configuration>
+            </plugin>
+
+            <!-- Плагин создания JAR -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>${maven-jar-plugin.version}</version>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <addClasspath>true</addClasspath>
+                            <mainClass>Main</mainClass>
+                        </manifest>
+                    </archive>
                 </configuration>
             </plugin>
         </plugins>
